@@ -3,6 +3,7 @@ Auto IRC Bot 3.0: Change Log
 
 3.0 Indev
 ==================================================================
+    * Added IsItUp module.
     * Added user:net for network-specific user blocks.
     * Bug fix: Fixed broken no-parameter config blocks.
     * Added core command SHUTDOWN.
